--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,20 @@
-pom.xml
-pom.xml.asc
-*.jar
-*.class
-.idea
-*.iml
-/lib/
-/classes/
-/target/
-/checkouts/
-.lein-deps-sum
-.lein-repl-history
-.lein-plugins/
-.lein-failures
-.nrepl-port
-.cpcache/
 .calva/output-window
 .clj-kondo/.cache
+.cpcache/
+.DS_store
+.idea
+.lein-deps-sum
+.lein-failures
+.lein-plugins/
+.lein-repl-history
 .lsp/.cache
+.nrepl-port
+*.class
+*.iml
+*.jar
+/checkouts/
+/classes/
+/lib/
+/target/
+pom.xml
+pom.xml.asc
